# orderbook-aggregator

./: Cargo.toml  README.md  build.rs
.trunk/: trunk.yaml
src/: binance.rs  bitstamp.rs  combined_orderbook.rs  lib.rs  types.rs
