[package]
name = "orderbook-aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.17", features = ["derive"] }
futures = "0.3.24"
prost = "0.11.0"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.11"
tonic = "0.8.2"

[build-dependencies]
tonic-build = "0.8.2"
