[package]
name = "orderbook-aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.17", features = ["derive"] }
futures = "0.3.24"
prost = "0.11.0"
rust_decimal = "1.26.1"
rust_decimal_macros = "1.26.1"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.11", features = ["sync"] }
tokio-tungstenite = { version = "0.17.2", features = ["connect", "native-tls"] }
tonic = "0.8.2"

[build-dependencies]
tonic-build = "0.8.2"
